force-app/main/default/objects/Customer_Address__c/fields/Transportation_area__c.field-meta.xml
<CustomField>
    <fullName>Transportation_area__c</fullName>
    <description>MDG主数据：运输区域</description>
    <label>Transportation area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transportation area</fullName>
            </value>
            <value>
                <fullName>0000000001</fullName>
                <label>0000000001:Region East, Region North</label>
            </value>
            <value>
                <fullName>0000000002</fullName>
                <label>0000000002:Region West, Region South</label>
            </value>
            <value>
                <fullName>0000010001</fullName>
                <label>0000010001:GP  1</label>
            </value>
            <value>
                <fullName>0000010002</fullName>
                <label>0000010002:GP  2</label>
            </value>
            <value>
                <fullName>0000010003</fullName>
                <label>0000010003:GP  3</label>
            </value>
            <value>
                <fullName>0000020001</fullName>
                <label>0000020001:LIM 1</label>
            </value>
            <value>
                <fullName>0000020002</fullName>
                <label>0000020002:LIM 2</label>
            </value>
            <value>
                <fullName>0000020003</fullName>
                <label>0000020003:LIM 3</label>
            </value>
            <value>
                <fullName>0000030001</fullName>
                <label>0000030001:MP  1</label>
            </value>
            <value>
                <fullName>0000030002</fullName>
                <label>0000030002:MP  2</label>
            </value>
            <value>
                <fullName>0000030003</fullName>
                <label>0000030003:MP  3</label>
            </value>
            <value>
                <fullName>0000040001</fullName>
                <label>0000040001:NW 1</label>
            </value>
            <value>
                <fullName>0000040002</fullName>
                <label>0000040002:NW 2</label>
            </value>
            <value>
                <fullName>0000040003</fullName>
                <label>0000040003:NW 3</label>
            </value>
            <value>
                <fullName>0000050001</fullName>
                <label>0000050001:FS  1</label>
            </value>
            <value>
                <fullName>0000050002</fullName>
                <label>0000050002:FS  2</label>
            </value>
            <value>
                <fullName>0000050003</fullName>
                <label>0000050003:FS  3</label>
            </value>
            <value>
                <fullName>0000060001</fullName>
                <label>0000060001:KZN 1</label>
            </value>
            <value>
                <fullName>0000060002</fullName>
                <label>0000060002:KZN 2</label>
            </value>
            <value>
                <fullName>0000060003</fullName>
                <label>0000060003:KZN 3</label>
            </value>
            <value>
                <fullName>0000070001</fullName>
                <label>0000070001:WCP 1</label>
            </value>
            <value>
                <fullName>0000070002</fullName>
                <label>0000070002:WCP 2</label>
            </value>
            <value>
                <fullName>0000070003</fullName>
                <label>0000070003:WCP 3</label>
            </value>
            <value>
                <fullName>0000080001</fullName>
                <label>0000080001:ECP 1</label>
            </value>
            <value>
                <fullName>0000080002</fullName>
                <label>0000080002:ECP 2</label>
            </value>
            <value>
                <fullName>0000080003</fullName>
                <label>0000080003:ECP 3</label>
            </value>
            <value>
                <fullName>0000090001</fullName>
                <label>0000090001:NCP 1</label>
            </value>
            <value>
                <fullName>0000090002</fullName>
                <label>0000090002:NCP 2</label>
            </value>
            <value>
                <fullName>0000090003</fullName>
                <label>0000090003:NCP 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>