force-app/main/default/objects/Customer_Address__c/fields/Valid_to__c.field-meta.xml
<CustomField>
    <fullName>Valid_to__c</fullName>
    <description>MDG主数据：Valid to</description>
    <label>Valid to</label>
    <type>Date</type>
</CustomField>