force-app/main/default/objects/Customer_Address__c/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <label>VAT Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>