force-app/main/default/objects/Customer_Address__c/fields/VAT_Tax_type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax_type__c</fullName>
    <label>VAT Tax type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13</fullName>
                <label>Gran contribuyente</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Autorretenedor</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Agente de retencion de iva</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>Regimen simple de tributacion</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Impuesto sobre las ventas</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>No responsable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>