force-app/main/default/objects/Customer_Address__c/validationRules/GLN_Length_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GLN_Length_Validation</fullName>
    <active>true</active>
    <description>GLN固定长度13位</description>
    <errorConditionFormula>NOT(ISBLANK(Global_Location_Number__c )) &amp;&amp; LEN(Global_Location_Number__c ) != 13</errorConditionFormula>
    <errorDisplayField>Global_Location_Number__c</errorDisplayField>
    <errorMessage>Global Location Number must be 13 charactors</errorMessage>
</ValidationRule>